feat: TTS 기능 및 UI 개선
- TTS 생성, 버퍼링, 재생 시점 최적화
- 캐릭터 말풍선과 선택지 표시 타이밍 개선 (3초 지연)
- 5번 단축키로 직접 입력 텍스트 박스 포커스 기능
- API 키 보안 강화 (.env 파일 사용)
- Vercel 배포된 TTS API 사용으로 CORS 문제 해결
- 말풍선 표시 시점을 TTS 재생과 동기화

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <button class="character-btn" data-character="3">캐릭터3</button>
                 <button class="character-btn" data-character="4">캐릭터4</button>
             </div>
+            
+            <!-- 커스텀 캐릭터 영역 -->
+            <div class="custom-character-section">
+                <h3>나만의 캐릭터를 만들어봐요</h3>
+                <textarea id="custom-character-input" placeholder="캐릭터를 설명해주세요 (예: 귀여운 고양이 캐릭터, 친근한 할머니 등)"></textarea>
+                <button id="custom-character-btn" class="custom-character-btn">대화하기</button>
+            </div>
         </div>
     </div>
 
@@ -28,10 +35,18 @@
         </div>
         <div class="chat-container">
             <div id="chat-messages" class="chat-messages"></div>
-            <div id="loading" class="loading hidden">응답 중...</div>
+            <div id="loading" class="loading hidden">어떤 말을 할까 고민중이에요~</div>
         </div>
     </div>
 
+    <script>
+        // API 키 설정 (실제 배포 시에는 서버에서 환경변수로 주입)
+        // 로컬 개발 시에는 .env 파일에서 로드
+        window.OPENAI_API_KEY = 'your_openai_api_key_here';
+        window.GOOGLE_API_KEY = 'your_google_api_key_here';
+        // Supertone API는 Vercel 배포된 API를 사용하므로 클라이언트에서 직접 호출하지 않음
+        window.SUPERTONE_API_KEY = 'not_needed_for_vercel_api';
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
